fixed setInterval() and removed the overlapping using clearInterval()

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ main{
 }
 
 p{
-    font-size: 40px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 3rem;
+    font-family: monospace;
     color: rgb(12, 237, 12);
 }
